--- a/styles/style.css
+++ b/styles/style.css
@@ -1,96 +1,197 @@
 body
 {
-    background-color: black;
-       
+    background-color: white;
 }
 main
 {
-    color: white;
+    color: black;
     text-align:center
 }
 
 h1
 {
-    color: red;
-    text-align:left;
+    color: black;
+    text-align:center;
+    font-family:  "Marker Felt", fantasy;
 }
 
 h2
 {
-    color:white;
-    text-align: left;
-    
+    color:black;
+    text-align: center;
+    font-family:  "Marker Felt", fantasy;
+}
+
+h3
+{
+    color:black;
+    text-align: center;
+    font-family:  "Marker Felt", fantasy;
 }
 nav
 {
-    background-color: grey;
-    padding:1px
+    background-color: white;
+    padding:0px
+    position: relative;
 }
 
 nav ul
 {
-    text-align: center;
-    font-size: 1.2em;
+    text-align: left ;
+    font-size: 1em;
+    margin: 2;
+    position: relative;
+    margin-left: -2em;
+    font-family:  "Lato", sans-serif;
 }
 
 nav ul li 
 {
     display: inline;
-    padding: 12px;
-    margin: 6px;
-    border: 2px solid red;
-    border-radius: 15px;
+    margin: 20px;
 }
 
 nav ul li a
 {
-    color: white;
+    color: black;
     text-decoration: none;
 }
 
 
-#active
-{
-    background-color: red;
-}
-
 .center
 {
     
- display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 50%;    
+  margin-left: 300px;
+  margin-right: 50px;
   border: 2px solid white;
+}
+
+.container {
+  position: relative;
+  width: auto;
+}
+
+.image {
+  display: block;
+  width: 100%;
+  height: auto;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0%;
+  transition: .45s ease;
+  background-color: #008CBA;
+}
+
+.container:hover .overlay {
+  opacity: 1;
+}
+
+.text {
+  color: white;
+  font-size: 20px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+}
+
+
+nav ul li:hover
+{
+    background-color: grey;
+    border: 10px solid grey;
+    opacity: 0.6;
+}
+
+a img {
+   position: relative;
+    left:350px;
+}
+
+hr.solid {
+  border-top: 10px solid #000000;
+  margin-bottom: 5px;
+  margin-top: 100px;
+}
+
+
+
+div.a {
+  text-align: center;
+    display: block;
+    margin-bottom: 15px;
+}
+
+div.b {
+  text-align: left;
+  display: block;
+  margin-top:-230px;
+  margin-left: 50px;
+
+
+}
+
+div.c {
+  text-align: right;
+  display: block;
+  margin-top:-190px ;
+margin-right: 30px;
+padding: 30px;
+} 
+
+img {
+  border-radius: 15px;
+}
+
+div.box {
+  width: 90%;
+}
+
+.centered {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.top-left {
+  position: absolute;
+    display: block;
+  top: 50px;
+  left: 350px;
+}
+    
+.middle-right {
+  position: absolute;
+  top: 200px;
+  right: 400px;
+}
+
+iframe
+{
+   max-height: 400vh;
+   height:400px;
+   width: 500px;
+   border: 5px solid white;
 }
 
 footer 
 {
-   position:absolute;
+ position:relative;
    bottom:0;
    width:100%;
-   height:40px;   
-   background-color: grey;
+   height:100px;   
+   background-color: black;
     
 }
-
-body, html {
-  height: 100%;
-}
-
-.bg {
-  /* The image used */
-  background-image: url("https://www.lifegate.com/app/uploads/climate-change.jpg");
-
-  /* Full height */
-  height: 100%;
-
-  /* Center and scale the image nicely */
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-
 
     
